Bug 414003 - Systemsettings crashes in QQmlObjectCreator::createInstance() when I'm trying to open any icon a second time
Summary: Systemsettings crashes in QQmlObjectCreator::createInstance() when I'm trying...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: Not decided
Assignee: Marco Martin
URL:
Keywords: drkonqi
: 413187 414039 414141 414146 414150 414160 414161 414182 414184 414221 414231 414254 414272 414279 414282 414293 414361 414472 414496 414557 414571 414853 414858 414876 415687 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-11-10 14:38 UTC by Alex Levkovich
Modified: 2020-01-02 17:00 UTC (History)
32 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.65
Sentry Crash Report:


Attachments
Call the "systemsettings5" error (3.11 MB, video/webm)
2019-11-12 22:34 UTC, Domker
Details
New crash information added by DrKonqi (10.63 KB, text/plain)
2019-11-15 00:14 UTC, German P
Details
New crash information added by DrKonqi (16.37 KB, patch)
2019-11-28 23:59 UTC, john4deidre2013
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Levkovich 2019-11-10 14:38:08 UTC
Application: systemsettings5 (5.17.2)

Qt Version: 5.13.2
Frameworks Version: 5.64.0
Operating System: Linux 5.3.8-arch1-1 x86_64
Distribution: Arch Linux

-- Information about the crash:
- Unusual behavior I noticed: 
When I open any icon at the first time then it's ok, I press back and it's still ok, when I'm secondly tryng to open any icon then it fails.

The crash can be reproduced every time.

-- Backtrace:
Application: Параметры системы (systemsettings5), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fbd70ace800 (LWP 21550))]

Thread 6 (Thread 0x7fbd6687b700 (LWP 21562)):
#0  0x00007fbd757a19ef in poll () at /usr/lib/libc.so.6
#1  0x00007fbd73582170 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007fbd73582241 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007fbd75d46b2c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007fbd75ced83c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007fbd75b1f305 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007fbd74e27449 in  () at /usr/lib/libQt5Qml.so.5
#7  0x00007fbd75b20530 in  () at /usr/lib/libQt5Core.so.5
#8  0x00007fbd7437a4cf in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007fbd757ac2d3 in clone () at /usr/lib/libc.so.6

Thread 5 (Thread 0x7fbd5a50a700 (LWP 21558)):
#0  0x00007fbd7579d42c in read () at /usr/lib/libc.so.6
#1  0x00007fbd735329f0 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007fbd73580a31 in g_main_context_check () at /usr/lib/libglib-2.0.so.0
#3  0x00007fbd73582118 in  () at /usr/lib/libglib-2.0.so.0
#4  0x00007fbd73583113 in g_main_loop_run () at /usr/lib/libglib-2.0.so.0
#5  0x00007fbd5ae34ba8 in  () at /usr/lib/libgio-2.0.so.0
#6  0x00007fbd7355ec11 in  () at /usr/lib/libglib-2.0.so.0
#7  0x00007fbd7437a4cf in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007fbd757ac2d3 in clone () at /usr/lib/libc.so.6

Thread 4 (Thread 0x7fbd5ad0b700 (LWP 21557)):
#0  0x00007fbd7579d42c in read () at /usr/lib/libc.so.6
#1  0x00007fbd735329f0 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007fbd73580a31 in g_main_context_check () at /usr/lib/libglib-2.0.so.0
#3  0x00007fbd73582118 in  () at /usr/lib/libglib-2.0.so.0
#4  0x00007fbd73582241 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#5  0x00007fbd73582292 in  () at /usr/lib/libglib-2.0.so.0
#6  0x00007fbd7355ec11 in  () at /usr/lib/libglib-2.0.so.0
#7  0x00007fbd7437a4cf in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007fbd757ac2d3 in clone () at /usr/lib/libc.so.6

Thread 3 (Thread 0x7fbd6c898700 (LWP 21554)):
#0  0x00007fbd74380c45 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007fbd6784b5ac in  () at /usr/lib/dri/i965_dri.so
#2  0x00007fbd6784b1a8 in  () at /usr/lib/dri/i965_dri.so
#3  0x00007fbd7437a4cf in start_thread () at /usr/lib/libpthread.so.0
#4  0x00007fbd757ac2d3 in clone () at /usr/lib/libc.so.6

Thread 2 (Thread 0x7fbd6e36e700 (LWP 21553)):
#0  0x00007fbd73532479 in g_mutex_lock () at /usr/lib/libglib-2.0.so.0
#1  0x00007fbd73580197 in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#2  0x00007fbd73582201 in  () at /usr/lib/libglib-2.0.so.0
#3  0x00007fbd73582241 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#4  0x00007fbd75d46b2c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007fbd75ced83c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#6  0x00007fbd75b1f305 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#7  0x00007fbd75f80b37 in  () at /usr/lib/libQt5DBus.so.5
#8  0x00007fbd75b20530 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007fbd7437a4cf in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007fbd757ac2d3 in clone () at /usr/lib/libc.so.6

Thread 1 (Thread 0x7fbd70ace800 (LWP 21550)):
[KCrash Handler]
#6  0x00007fbd75d20d8f in QObject::property(char const*) const () at /usr/lib/libQt5Core.so.5
#7  0x00007fbd65586ed5 in  () at /usr/lib/qt/qml/org/kde/kirigami.2/libkirigamiplugin.so
#8  0x00007fbd74e0e9e8 in QQmlObjectCreator::createInstance(int, QObject*, bool) () at /usr/lib/libQt5Qml.so.5
#9  0x00007fbd74e0cfd3 in QQmlObjectCreator::setPropertyBinding(QQmlPropertyData const*, QV4::CompiledData::Binding const*) () at /usr/lib/libQt5Qml.so.5
#10 0x00007fbd74e0d71b in QQmlObjectCreator::setupBindings(bool) () at /usr/lib/libQt5Qml.so.5
#11 0x00007fbd74e0e39d in QQmlObjectCreator::populateInstance(int, QObject*, QObject*, QQmlPropertyData const*) () at /usr/lib/libQt5Qml.so.5
#12 0x00007fbd74e0efbe in QQmlObjectCreator::createInstance(int, QObject*, bool) () at /usr/lib/libQt5Qml.so.5
#13 0x00007fbd74e101ce in QQmlObjectCreator::create(int, QObject*, QQmlInstantiationInterrupt*) () at /usr/lib/libQt5Qml.so.5
#14 0x00007fbd74e0ebed in QQmlObjectCreator::createInstance(int, QObject*, bool) () at /usr/lib/libQt5Qml.so.5
#15 0x00007fbd74e0cfd3 in QQmlObjectCreator::setPropertyBinding(QQmlPropertyData const*, QV4::CompiledData::Binding const*) () at /usr/lib/libQt5Qml.so.5
#16 0x00007fbd74e0d71b in QQmlObjectCreator::setupBindings(bool) () at /usr/lib/libQt5Qml.so.5
#17 0x00007fbd74e0e39d in QQmlObjectCreator::populateInstance(int, QObject*, QObject*, QQmlPropertyData const*) () at /usr/lib/libQt5Qml.so.5
#18 0x00007fbd74e0efbe in QQmlObjectCreator::createInstance(int, QObject*, bool) () at /usr/lib/libQt5Qml.so.5
#19 0x00007fbd74e101ce in QQmlObjectCreator::create(int, QObject*, QQmlInstantiationInterrupt*) () at /usr/lib/libQt5Qml.so.5
#20 0x00007fbd74e0ebed in QQmlObjectCreator::createInstance(int, QObject*, bool) () at /usr/lib/libQt5Qml.so.5
#21 0x00007fbd74e101ce in QQmlObjectCreator::create(int, QObject*, QQmlInstantiationInterrupt*) () at /usr/lib/libQt5Qml.so.5
#22 0x00007fbd74d8ac72 in QQmlComponentPrivate::beginCreate(QQmlContextData*) () at /usr/lib/libQt5Qml.so.5
#23 0x00007fbd74d89364 in QQmlComponent::create(QQmlContext*) () at /usr/lib/libQt5Qml.so.5
#24 0x00007fbd772e9203 in  () at /usr/lib/libKF5KCMUtils.so.5
#25 0x00007fbd772e4e88 in KCModuleLoader::loadModule(KCModuleInfo const&, KCModuleLoader::ErrorReporting, QWidget*, QStringList const&) () at /usr/lib/libKF5KCMUtils.so.5
#26 0x00007fbd772ee6a7 in  () at /usr/lib/libKF5KCMUtils.so.5
#27 0x00007fbd772eed1b in KCModuleProxy::realModule() const () at /usr/lib/libKF5KCMUtils.so.5
#28 0x00007fbd773306de in ModuleView::updatePageIconHeader(KPageWidgetItem*, bool) () at /usr/lib/libsystemsettingsview.so.3
#29 0x00007fbd7733149e in ModuleView::addModule(KCModuleInfo*) () at /usr/lib/libsystemsettingsview.so.3
#30 0x00007fbd773318a9 in ModuleView::loadModule(QModelIndex const&) () at /usr/lib/libsystemsettingsview.so.3
#31 0x00007fbd75d1ac20 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#32 0x00007fbd769b29d6 in QAbstractItemView::activated(QModelIndex const&) () at /usr/lib/libQt5Widgets.so.5
#33 0x00007fbd769c1303 in QAbstractItemView::mouseDoubleClickEvent(QMouseEvent*) () at /usr/lib/libQt5Widgets.so.5
#34 0x00007fbd7678813b in QWidget::event(QEvent*) () at /usr/lib/libQt5Widgets.so.5
#35 0x00007fbd7683929f in QFrame::event(QEvent*) () at /usr/lib/libQt5Widgets.so.5
#36 0x00007fbd769c0ce0 in QAbstractItemView::viewportEvent(QEvent*) () at /usr/lib/libQt5Widgets.so.5
#37 0x00007fbd75ceea23 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#38 0x00007fbd767444d4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#39 0x00007fbd7674df8a in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#40 0x00007fbd75ceed12 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#41 0x00007fbd7674d12b in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () at /usr/lib/libQt5Widgets.so.5
#42 0x00007fbd767a4371 in  () at /usr/lib/libQt5Widgets.so.5
#43 0x00007fbd767a7414 in  () at /usr/lib/libQt5Widgets.so.5
#44 0x00007fbd767444e5 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#45 0x00007fbd7674de11 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#46 0x00007fbd75ceed12 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#47 0x00007fbd76124cf5 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at /usr/lib/libQt5Gui.so.5
#48 0x00007fbd7612664b in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () at /usr/lib/libQt5Gui.so.5
#49 0x00007fbd76100b0c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Gui.so.5
#50 0x00007fbd703700ec in  () at /usr/lib/libQt5XcbQpa.so.5
#51 0x00007fbd735803ee in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#52 0x00007fbd73582201 in  () at /usr/lib/libglib-2.0.so.0
#53 0x00007fbd73582241 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#54 0x00007fbd75d46b13 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#55 0x00007fbd75ced83c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#56 0x00007fbd75cf5676 in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#57 0x000055c62ba4a475 in  ()
#58 0x00007fbd756d4153 in __libc_start_main () at /usr/lib/libc.so.6
#59 0x000055c62ba4a4fe in _start ()
[Inferior 1 (process 21550) detached]

Possible duplicates by query: bug 413982, bug 413948, bug 413945, bug 413943, bug 413931.

Reported using DrKonqi
Comment 1 Nate Graham 2019-11-12 20:22:11 UTC
*** Bug 414039 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2019-11-12 20:24:26 UTC
Got a duplicate report, but I can't reproduce this.

For anyone who can, detailed step-by-step Steps To Reproduce would be appreciated. See https://community.kde.org/Get_Involved/Issue_Reporting#Steps_to_Reproduce
Comment 3 Eric Hameleers 2019-11-12 20:37:38 UTC
Hi Nate,

I thought I was pretty specific in my report (the duplicate bug 414039) on how I can consistently trigger this bug.
What is missing?
Let me re-phrase to help you understand better.

1- Start system settings, either from the menu or via commandline
2- Click on the icon 'startup and shutdown'
3- Perform any action in the configuration window that appears (some random clicking, or changing some setting, it does not matter what you do here)
4- Return to the system settings main window by clicking the 'back' button in the top left
5- Click 'startup and shutdown' a second time
6- At this moment, the crash occurs.

This crash occurs only and always when applying the above sequence of actions to 'startup and shutdown'.
Other icons in the main screen of systemsettings do not make systemsettings crash when I access them a second time.

Eric
Comment 4 Domker 2019-11-12 21:42:03 UTC
I have the same bug.

It is easier to cause this bug when "Icon View" is set.

1) Set "Icon View" in systemsettings5
2) Close systemsettings5 (very important)
3) Run systemsettings5
4) Select "Global appearance" and return to all settings
5) Select e.g. "Fonts" and return to all settings
6) Do that until at some point an error.

If it is started via the terminal after calling the error you can see:
"Memory protection violation"
Comment 5 Domker 2019-11-12 22:34:37 UTC
Created attachment 123877 [details]
Call the "systemsettings5" error
Comment 6 David Edmundson 2019-11-12 22:44:02 UTC
Please can you include your frameworks version in all bug updates.
Comment 7 Nate Graham 2019-11-12 22:47:40 UTC
(In reply to Arek from comment #4)
> It is easier to cause this bug when "Icon View" is set.
> 
> 1) Set "Icon View" in systemsettings5
> 2) Close systemsettings5 (very important)
> 3) Run systemsettings5
> 4) Select "Global appearance" and return to all settings
> 5) Select e.g. "Fonts" and return to all settings
> 6) Do that until at some point an error.
Thanks, I can reproduce the issue with 100% reliability when following these instructions. That's very helpful.
Comment 8 Domker 2019-11-12 22:52:58 UTC
Comment on attachment 123877 [details]
Call the "systemsettings5" error

Operating System: Arch Linux 
KDE Plasma Version: 5.17.3
KDE Frameworks Version: 5.64.0
Qt Version: 5.13.2
Kernel Version: 5.3.10-arch1-1
OS Type: 64-bit
Comment 9 Texstar 2019-11-13 10:42:27 UTC
Icon view is set to default resulting in systemsettings5 crash.

Operating System: PCLinuxOS 2019
KDE Plasma Version: 5.17.3
KDE Frameworks Version: 5.64.0
Qt Version: 5.12.4
Kernel Version: 5.3.11-pclos2019
OS Type: 64-bit
Comment 10 David Edmundson 2019-11-13 13:55:56 UTC
Urgh, bug is readily apparent.

QmlComponentsPool is a static.

It's initialized here:

QmlComponentsPool::initialize(QQmlEngine *engine)

So we have a singleton that can be invoked multiple times from different places.
Pragmatically it has a lifespan of the engine.
Comment 11 David Edmundson 2019-11-13 13:56:33 UTC
Only sensible fix I can think of is to make it one per engine, and then tear down appropriately. Fortunately that should be fairly straightforward.
Comment 12 David Edmundson 2019-11-13 14:23:52 UTC
https://phabricator.kde.org/D25284
Comment 13 David Edmundson 2019-11-13 18:58:26 UTC
*** Bug 413187 has been marked as a duplicate of this bug. ***
Comment 14 Texstar 2019-11-14 08:25:37 UTC
https://phabricator.kde.org/D25284 patch applied to the kirigami-5.64.0-2pclos2019.x86_64.rpm and seems to have fixed the problem for us.
Comment 15 David Edmundson 2019-11-14 16:38:57 UTC
*** Bug 414141 has been marked as a duplicate of this bug. ***
Comment 16 David Edmundson 2019-11-14 18:00:56 UTC
*** Bug 414146 has been marked as a duplicate of this bug. ***
Comment 17 David Edmundson 2019-11-14 18:09:14 UTC
Git commit 4a9820a6df15a55a7d36d343ce70a25ba7d56b79 by David Edmundson.
Committed on 13/11/2019 at 18:09.
Pushed by davidedmundson into branch 'master'.

Make QmlComponentsPool one instance per engine

Summary:
If we create 2 engines in an application the singleton is initialised to
the first engine. If that first engine disappears the internal m_unit is
dangling.

A good example of this is systemsettings in the icon view if we enter
two modules one after another. It's currently only kept alive because
the sidebar created the first reference.

Test Plan:
System settings in icon view
opened global theme
went back
open fonts theme
didn't crash

Subscribers: plasma-devel

Tags: #kirigami

Differential Revision: https://phabricator.kde.org/D25284

M  +33   -21   src/columnview.cpp
M  +1    -3    src/columnview_p.h

https://commits.kde.org/kirigami/4a9820a6df15a55a7d36d343ce70a25ba7d56b79
Comment 18 Nate Graham 2019-11-14 19:55:31 UTC
*** Bug 414150 has been marked as a duplicate of this bug. ***
Comment 19 postix 2019-11-14 20:35:23 UTC
(In reply to David Edmundson from comment #17)
> Git commit 4a9820a6df15a55a7d36d343ce70a25ba7d56b79 by David Edmundson.
> Committed on 13/11/2019 at 18:09.
> Pushed by davidedmundson into branch 'master'.

Thanks for fixing it!

With which revision of Plasma will the patch be rolled out?
With the next bug fix release, that means for the 5.17 branch with 5.17.4?
Comment 20 Nate Graham 2019-11-14 20:43:59 UTC
The bug was fixed in Kirigami, so it will actually be in Frameworks 5.65 next month.
Comment 21 German P 2019-11-15 00:14:01 UTC
Created attachment 123937 [details]
New crash information added by DrKonqi

systemsettings5 (5.17.3) using Qt 5.13.2

- What I was doing when the application crashed:

First time I open a module (for example Plasma Style) it works fine, when I go back and open the same module or another it crashes. Reproducible all the time.

-- Backtrace (Reduced):
#6  0x00007f02ef3dfd8f in QObject::property(char const*) const () at /usr/lib/libQt5Core.so.5
#7  0x00007f02e00e4ed5 in  () at /usr/lib/qt/qml/org/kde/kirigami.2/libkirigamiplugin.so
#8  0x00007f02ee4cd9e8 in QQmlObjectCreator::createInstance(int, QObject*, bool) () at /usr/lib/libQt5Qml.so.5
#9  0x00007f02ee4cbfd3 in QQmlObjectCreator::setPropertyBinding(QQmlPropertyData const*, QV4::CompiledData::Binding const*) () at /usr/lib/libQt5Qml.so.5
#10 0x00007f02ee4cc71b in QQmlObjectCreator::setupBindings(bool) () at /usr/lib/libQt5Qml.so.5
Comment 22 David Edmundson 2019-11-15 10:48:48 UTC
*** Bug 414160 has been marked as a duplicate of this bug. ***
Comment 23 David Edmundson 2019-11-15 11:49:34 UTC
*** Bug 414161 has been marked as a duplicate of this bug. ***
Comment 24 David Edmundson 2019-11-15 18:15:05 UTC
*** Bug 414182 has been marked as a duplicate of this bug. ***
Comment 25 Nate Graham 2019-11-19 16:47:52 UTC
*** Bug 414254 has been marked as a duplicate of this bug. ***
Comment 26 Nate Graham 2019-11-19 16:47:57 UTC
*** Bug 414282 has been marked as a duplicate of this bug. ***
Comment 27 Nate Graham 2019-11-19 16:48:57 UTC
*** Bug 414272 has been marked as a duplicate of this bug. ***
Comment 28 Nate Graham 2019-11-19 16:49:13 UTC
*** Bug 414221 has been marked as a duplicate of this bug. ***
Comment 29 Nate Graham 2019-11-19 16:49:27 UTC
*** Bug 414184 has been marked as a duplicate of this bug. ***
Comment 30 Nate Graham 2019-11-19 16:51:10 UTC
*** Bug 414231 has been marked as a duplicate of this bug. ***
Comment 31 Nate Graham 2019-11-19 18:41:38 UTC
*** Bug 414279 has been marked as a duplicate of this bug. ***
Comment 32 Nate Graham 2019-11-20 16:27:48 UTC
*** Bug 414293 has been marked as a duplicate of this bug. ***
Comment 33 Nate Graham 2019-11-22 15:48:08 UTC
*** Bug 414361 has been marked as a duplicate of this bug. ***
Comment 34 Nate Graham 2019-11-28 04:27:49 UTC
*** Bug 414571 has been marked as a duplicate of this bug. ***
Comment 35 Nate Graham 2019-11-28 04:28:05 UTC
*** Bug 414557 has been marked as a duplicate of this bug. ***
Comment 36 john4deidre2013 2019-11-28 23:59:33 UTC
Created attachment 124173 [details]
New crash information added by DrKonqi

kinfocenter (5.17.3) using Qt 5.13.1

- What I was doing when the application crashed:

i selected file sync first.  that took a very long time to respond.
when it finally got to file sync, i then selected memory, it then crashed

-- Backtrace (Reduced):
#6  0x00007f0ae301e60f in QObject::property (this=0x5576042eedc0, name=name@entry=0x7f0ac87b1264 "gridUnit") at kernel/qobject.cpp:3974
#7  0x00007f0ac87921e0 in ColumnView::<lambda()>::operator() (__closure=<synthetic pointer>) at /usr/src/debug/kirigami2-5.64.0-1.1.x86_64/src/columnview.cpp:45
#8  ColumnView::classBegin (this=0x5576046c5130) at /usr/src/debug/kirigami2-5.64.0-1.1.x86_64/src/columnview.cpp:1427
#9  0x00007f0ae22cd85f in QQmlObjectCreator::createInstance (this=0x7ffcea49e850, index=38, parent=<optimized out>, isContextObject=<optimized out>) at /usr/src/debug/libqt5-qtdeclarative-5.13.1-1.2.x86_64/src/qml/qml/qqmlobjectcreator.cpp:1280
#10 0x00007f0ae22cbe6a in QQmlObjectCreator::setPropertyBinding (this=0x7ffcea49e850, bindingProperty=0x7f0ab80d7288, binding=0x7f0ac8b4de24) at /usr/src/debug/libqt5-qtdeclarative-5.13.1-1.2.x86_64/src/qml/qml/qqmlobjectcreator.cpp:856
Comment 37 Nate Graham 2019-11-29 00:40:08 UTC
This bug is already marked as fixed (in Kirigami 5.65). There is no need to add further information unless you are using the version of the code that supposedly contains the fix and you can still reproduce the issue. Otherwise just sit tight. :)
Comment 38 Nate Graham 2019-11-30 20:56:26 UTC
*** Bug 414496 has been marked as a duplicate of this bug. ***
Comment 39 Nate Graham 2019-11-30 20:56:46 UTC
*** Bug 414472 has been marked as a duplicate of this bug. ***
Comment 40 David Edmundson 2019-12-06 00:24:28 UTC
*** Bug 414876 has been marked as a duplicate of this bug. ***
Comment 41 Nate Graham 2019-12-06 16:21:03 UTC
*** Bug 414858 has been marked as a duplicate of this bug. ***
Comment 42 Nate Graham 2019-12-06 16:22:24 UTC
*** Bug 414853 has been marked as a duplicate of this bug. ***
Comment 43 Nate Graham 2020-01-02 17:00:24 UTC
*** Bug 415687 has been marked as a duplicate of this bug. ***